# Chatbot

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  db.py  erros.py  main.py  seguranca.py
app/api/: conversas.py  documentos.py  saude.py
app/conversa/: historico.py  modelos.py  repositorio.py  servico.py
app/limites/: dependencias.py  orcamento.py  rate_limit.py  redis_cliente.py  tokens.py
app/llm/: anthropic_llm.py  base.py  fabrica.py  fake.py  resiliencia.py
app/rag/: chunker.py  contexto.py  embeddings.py  fabrica.py  indice.py  modelos.py
migracoes/: env.py
migracoes/versions/: 37a1c9add2cd_cria_conversas_e_mensagens.py  7037e312c516_cria_documentos_e_trechos_com_embeddings.py
tests/: conftest.py  sse.py  test_chunker.py  test_config.py  test_conversa.py  test_fallback.py  test_historico.py  test_limites.py  test_rag.py  test_resiliencia.py  test_saude.py  test_seguranca.py
web/: app.js  estilo.css  index.html
